fix routers
